fix: align footer wrapper width with main content wrapper on desktop
The footer wrapper now uses the same responsive widths as the main
#wrapper at each breakpoint (580px at sm, 680px at lg, 780px at xl).

--- a/style.scss
+++ b/style.scss
@@ -1256,9 +1256,17 @@ button#subscribeButton {
     background: rgb(238, 238, 238);
     margin-left: 20px;
 
-    @include lg {
-      width: 600px;
+    @include sm {
+      width: 580px;
       margin-left: auto;
+    }
+
+    @include lg {
+      width: 680px;
+    }
+
+    @include xl {
+      width: 780px;
     }
   }
 
